--- a/register.html
+++ b/register.html
@@ -35,23 +35,26 @@
                                     <div class="mb-3">
                                         <label for="reg-username" class="form-label">用户名</label>
                                         <input type="text" class="form-control form-control-lg" id="reg-username" name="username" required placeholder="请输入用户名">
-                                        <div id="username-error" class="form-text text-danger"></div>
+                                        <div class="error-message" id="reg-username-error"></div>
                                     </div>
                                     <div class="mb-3">
                                         <label for="reg-phone" class="form-label">手机号</label>
                                         <input type="tel" class="form-control form-control-lg" id="reg-phone" name="phone" required placeholder="请输入手机号" pattern="[0-9]{11}">
-                                        <div id="phone-error" class="form-text text-danger"></div>
+                                        <div class="error-message" id="reg-phone-error"></div>
                                     </div>
                                     <div class="mb-3">
                                         <label for="reg-password" class="form-label">密码</label>
                                         <input type="password" class="form-control form-control-lg" id="reg-password" name="password" required placeholder="请输入密码（至少6位）" minlength="6">
-                                        <div id="password-error" class="form-text text-danger"></div>
+                                        <div class="password-strength mt-2"></div>
+                                        <div class="strength-text"></div>
+                                        <div class="error-message" id="reg-password-error"></div>
                                     </div>
                                     <div class="mb-3">
                                         <label for="reg-confirm" class="form-label">确认密码</label>
                                         <input type="password" class="form-control form-control-lg" id="reg-confirm" name="confirm" required placeholder="请再次输入密码">
-                                        <div id="confirm-error" class="form-text text-danger"></div>
+                                        <div class="error-message" id="reg-confirm-error"></div>
                                     </div>
+                                    <div class="error-message" id="general-error"></div>
                                     <button type="submit" class="btn btn-primary btn-lg w-100 mb-3">
                                         <i class="bi bi-person-plus me-2"></i>注册
                                     </button>
