improvement:使用anilistAPI提供动漫信息

--- a/detail.html
+++ b/detail.html
@@ -228,6 +228,7 @@
     <!-- 确保按正确顺序加载脚本 -->
     <script src="js/common.js"></script>
     <script src="js/dom.js"></script>
+    <script src="js/api/anilist-service.js"></script>
     <script src="js/api/jikan-service.js"></script>
     <script src="js/api/anime-service.js"></script>
     <script src="js/page/detail.js"></script>
