feature:完善首页功能

--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
         您的浏览器不支持音频播放。
     </audio>
 
+    <!-- 回到顶部按钮 -->
+    <button id="back-to-top" class="back-to-top-btn">
+        <i class="bi bi-arrow-up"></i>
+    </button>
     <!-- Bootstrap 底部 -->
     <footer class="footer py-4 bg-dark text-light">
         <div class="container">
