feature:在detail.html中添加预告片功能

--- a/detail.html
+++ b/detail.html
@@ -151,7 +151,16 @@
                     <h3>背景信息</h3>
                     <p id="anime-background">暂无背景信息</p>
                 </section>
-
+                <!-- 预告片区域 -->
+                <section class="trailer-section py-4">
+                    <div class="container">
+                        <h3 class="mb-3">预告片</h3>
+                        <div id="trailer-container">
+                            <!-- 预告片将在这里动态渲染 -->
+                            <p class="text-muted">正在加载预告片信息...</p>
+                        </div>
+                    </div>
+                </section>
                 <!-- 剧集列表 -->
                 <section class="episodes">
                     <h3>剧集列表</h3>
