--- a/list.html
+++ b/list.html
@@ -188,6 +188,7 @@
     <!-- Bootstrap 5 JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/api/anilist-service.js"></script>
+    <script src="js/api/jikan-service.js"></script>
     <script src="js/api/anime-service.js"></script>
     <script src="js/common.js"></script>
     <script src="js/dom.js"></script>
